<resources>
    <string name="app_name">Dharna</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup_for_new_account"><u>Signup for new account</u></string>
    <string name="already_registered_sign_in"><u>Already registered, Sign In</u></string>
    <string name="reset_forgot_password"><u>Reset/Forgot Password</u></string>
    <string name="name_of_the_organisation_leader">Name of the organisation/leader</string>
    <string name="topic_issue">Topic/Issue</string>
    <string name="place_of_dharna_starting_point_of_dharna">Place of Dharna/Starting point of Dharna</string>
    <string name="date_of_start_of_dharna">Starting Date of Dharna</string>
    <string name="time_of_start">Time of Start</string>
    <string name="description">Description</string>
    <string name="submit">submit</string>
    <string name="todo">TODO</string>
    <string name="datepicker">datepicker</string>
</resources>
