<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.hrishabh.dharna.DharnaRegister">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_the_organisation_leader"
        android:id="@+id/name"
        android:inputType="textPersonName"
        android:padding="20dp"/>
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/topic_issue"
        android:padding="20dp"
        android:inputType="text"
        android:id="@+id/topic" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/place"
        android:hint="@string/place_of_dharna_starting_point_of_dharna"
        android:padding="20dp"
        android:inputType="text"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">


        <EditText
            android:id="@+id/date"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_start_of_dharna"
            android:inputType="date"
            android:padding="20dp" />

        <ImageView
            android:id="@+id/cale"
            android:layout_width="54dp"
            android:layout_height="52dp"
            android:contentDescription="@string/datepicker"
            android:src="@drawable/calendar" />

    </LinearLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time_of_start"
        android:padding="20dp"
        android:inputType="time"
        android:id="@+id/time"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:id="@+id/des"
        android:lines="7"
        android:hint="@string/description"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/sub"
        android:padding="20dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>

    

</LinearLayout>
